fix: title alignment

--- a/client/src/templates/Challenges/classic/editor.css
+++ b/client/src/templates/Challenges/classic/editor.css
@@ -61,6 +61,7 @@ textarea.inputarea {
 .challenge-description-header {
   display: flex;
   gap: 7px;
+  margin: 0.1em 0 0.6rem;
 }
 
 .description-container h1 {
@@ -68,7 +69,7 @@ textarea.inputarea {
   font-size: 1.1rem;
   font-weight: 700;
   line-height: 1.1;
-  margin: 0.1em 0 0.6rem;
+  margin: 0;
 }
 
 .description-highlighter {
